<resources>
    <string name="app_name">MemThings</string>
    <string name="attempt_correct">Правильно! Попытка=%1$d в игре [%2$s]</string>
    <string name="attempt_incorrect">Не верно!"\n"Результаты игры [%1$s] обнуляются!</string>
    <string name="all_attempts_correct">Сеанс [%1$s] завершен!"\n"За %2$d попытки"\n"потрачено (в среднем) %3$d сек</string>
    <string name="press_button">Нажмите на одну из кнопок внизу!</string>
    <string name="restart_game">Перестартовать [%1$s]?"\n"</string>
    <string name="break_curr_start_new_game">Прервать [%1$s] и стартовать [%2$s]?"\n"</string>
    <string name="ok_option">OK</string>
    <string name="yes_option">Да</string>
    <string name="no_option">Нет</string>
    <string name="cancel_option">Отмена</string>
    <string name="results_statistic">Статистика усредненных"\n"результатов (сек)"\n"</string>
    <string name="no_results">нет"\n"</string>
    <string name="game_title">Игры"\n\n"</string>
    <string name="records">Рекорды"\n\n"</string>
    <string name="timerFinished">Таймер достиг максимума (1 час)!"\n"Результаты игры [%1$s] обнуляются! </string>
    <string name="last_results">Последние"\n"результаты"\n"</string>
    <string name="exitGameActivity">Выход из игры</string>
    <string name="exitGame">Выход из игры</string>
    <string name="areYouSure">Вы уверены?</string>
    <string name="things_num">Число запоминаемых предметов:</string>
    <string name="mem_time">Время (сек) запоминания предметов:</string>
    <string name="remem_time">Время (сек) вспоминания предметов:</string>
    <string name="goto_game">Начинаем игру!"</string>
    <string name="title_activity_memorize">MemorizeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="forward">Далее</string>
    <string name="ready">Готово</string>
    <string name="source">=>Перейти к источнику</string>
    <string name="solution">=>Перейти к решению</string>
    <string name="previous">Previous</string>
    <string name="memorizeActivityAim">Запоминаем ...</string>
    <string name="rememberActivityAim">Вспоминаем ...</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="auto_complete_text_view_hint">Введите название фото..."</string>
    <string name="warning_for_clear_cell">Для очистки ячейки нажмите на нее</string>
    <string name="speak_pls">Говорите...</string>

</resources>